[package]
name = "mygo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.5",features = ["tracing", "macros"]}
clap = { version = "4.2.3", features = ["derive"] }
curve25519-dalek = "4.1.3"
#fourq = "0.1.6"
hyper = { version = "0.14", features = ["full"] }
local-ip-address = "0.6.1"
pin-project = "1"
prost = "0.11.9"
prost-types = "0.11.9"
redis = "0.26.1"
serde = { version = "1.0.205", features = ["derive"]}
serde_derive = "1.0.205"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls"] }
tower = { version = "0.4", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
futures-core = "0.3.30"
tokio-stream = "0.1.15"
futures = "0.3.30"
h2 = "0.4"
rand = "0.8.5"
num_cpus = "1.16.0"
p256 = {version = "0.13.2", features = ["ecdh"]}
rand_core = "0.6.4"
tracing-appender = "0.2.3"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
